[package]
name = "milk_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
image = "0.25.2"
imageproc = "0.25.0"
indicatif = "0.17.8"
palette = "0.7.6"
rand = "0.8.5"
rfd = "0.14.1"
